add get all transactions method
